css/index.css
:root {
	--neutral-800: #262626;
	--gray-200: #e5e7eb;
	--sky-400: #38bdf8;
	--sky-500: #0ea5e9;
	--red-500: #ef4444;
	--red-600: #dc2626;
	--border-radius: 10px;
	--box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.1);
}

html {
	box-sizing: border-box;
}

*,
*:before,
*:after,
hr {
	box-sizing: inherit;
}

*,
*:before,
*:after,
h1,
fieldset {
	padding: 0;
	margin: 0;
}

body {
	font-family: 'Roboto', sans-serif;
	color: var(--neutral-800);
	background-color: var(--gray-200);
}

.success-btn {
	font-size: 1.2rem;
	font-weight: 700;
	color: #fff;
	padding: 8px 16px;
	background-color: var(--sky-400);
	border: none;
	border-radius: var(--border-radius);
	cursor: pointer;

	justify-self: center;
}

.success-btn:hover,
.success-btn:active {
	background-color: var(--sky-500);
}

.modal {
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.3);

	display: none;
	position: fixed;
	z-index: 2;
}

.active {
	display: block;
}

.modal-content {
	width: 400px;
	padding: 30px;
	background-color: #fff;
	border-radius: var(--border-radius);
	box-shadow: var(--box-shadow);

	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.modal-header {
	text-align: center;

	margin-bottom: 10px;
}

.modal-close-btn {
	background: none;
	border: none;
	cursor: pointer;
	padding: 5px;

	position: absolute;
	top: 5px;
	right: 5px;
}

.book-form {
	display: grid;
	row-gap: 20px;
}

.form-group {
	display: grid;
	row-gap: 10px;
}

.form-group-inline {
	display: grid;
	grid-auto-flow: column;
	column-gap: 8px;
	justify-content: start;
	align-items: center;
}

.form-label {
	font-size: 1.1rem;
}

input.form-control {
	padding: 5px;
}

.container {
	min-height: 100vh;

	display: grid;
	grid-template-rows: repeat(2, auto) 1fr;
	row-gap: 20px;
}

.header {
	padding: 20px;
	background-color: #fff;
	box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1);

	z-index: 1;
}

.main {
	display: grid;
	align-content: start;
}

.cards {
	max-width: 900px;

	justify-self: center;
	display: grid;
	grid-template-columns: repeat(auto-fill, 215px);
	gap: 10px;
}

.card {
	text-align: center;
	padding: 20px;
	background-color: #fff;
	border-radius: var(--border-radius);
	box-shadow: var(--box-shadow);

	display: grid;
	row-gap: 5px;
}

.read-btn {
	border: 1px solid var(--neutral-800);
	padding: 4px 0;
	background: transparent;
	cursor: pointer;
}

.read-btn:hover,
.read-btn:active {
	background-color: #e5e7eb;
}

.remove-card-btn {
	color: #fff;
	padding: 4px 0;
	background-color: #fff;
	background-color: var(--red-500);
	border: 1px solid var(--red-500);
	cursor: pointer;
}

.remove-card-btn:hover,
.remove-card-btn:active {
	background-color: var(--red-600);
}

